hdone/objects/Schedule__c.object
<CustomObject>
    <description>Contains schedule information for Facilities, Providers or the Address Types which is combination of a Facility or Provider and a specific address.</description>
    <fields>
        <fullName>AccountIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Account__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Account__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Account__c),
&quot;HealthDetail&quot;, Account__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Account__r.SourceOrg__c , &quot;HealthDetail&quot;,Account__r.ExternalId__c,
&quot;Customer&quot;, Account__r.Remote_Account_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enables organizations or facilities to have schedule information</description>
        <inlineHelpText>Organization or facility</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddressTypeId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address_Type__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Address_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_Type__c),
&quot;HealthDetail&quot;, Address_Type__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address_Type__r.SourceOrg__c , &quot;HealthDetail&quot;,Address_Type__r.ExternalId__c,
&quot;Customer&quot;, Address_Type__r.Remote_AddressType_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>AddressTypeId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Address Type</description>
        <inlineHelpText>Address and Provider or Facility associated with schedule.  Cannot edit once associated.</inlineHelpText>
        <label>Address Type</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Address item. Enables viewing of Address information from record.</description>
        <inlineHelpText>Address based on value of Address Type field</inlineHelpText>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditSettingIdFormula__c</fullName>
        <formula>IF(NOT(ISBLANK( AuditSetting__c )),
CASE( SourceOrg__c , &quot;Customer&quot;,
(CASE(  AuditSetting__r.SourceOrg__c  , &quot;Customer&quot;, CASESAFEID( AuditSetting__c ),
&quot;HealthDetail&quot;,  AuditSetting__r.ExternalId__c , &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( AuditSetting__r.SourceOrg__c , &quot;HealthDetail&quot;,AuditSetting__r.ExternalId__c,
&quot;Customer&quot;,  AuditSetting__r.Remote_AuditSettingId__c  , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AuditSettingIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditSetting</label>
        <referenceTo>AuditSetting__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvailableTimes__c</fullName>
        <label>AvailableTimes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>13.00</fullName>
                </value>
                <value>
                    <fullName>13.25</fullName>
                </value>
                <value>
                    <fullName>13.50</fullName>
                </value>
                <value>
                    <fullName>13.75</fullName>
                </value>
                <value>
                    <fullName>14.00</fullName>
                </value>
                <value>
                    <fullName>14.25</fullName>
                </value>
                <value>
                    <fullName>14.50</fullName>
                </value>
                <value>
                    <fullName>14.75</fullName>
                </value>
                <value>
                    <fullName>15.00</fullName>
                </value>
                <value>
                    <fullName>15.25</fullName>
                </value>
                <value>
                    <fullName>15.50</fullName>
                </value>
                <value>
                    <fullName>15.75</fullName>
                </value>
                <value>
                    <fullName>16.00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that schedule is available or active</description>
        <inlineHelpText>Schedule is available for assignment</inlineHelpText>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Provider__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;,
(CASE(  Provider__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Provider__c),
&quot;HealthDetail&quot;, Provider__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Provider__r.SourceOrg__c , &quot;HealthDetail&quot;,Provider__r.ExternalId__c,
&quot;Customer&quot;, Provider__r.Remote_Provider_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataFileIdFormula__c</fullName>
        <description>DataFile Id</description>
        <formula>CASESAFEID(DataFile__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DataFile Id</inlineHelpText>
        <label>DataFileIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataFile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Data File lookup. Used for scheduling DataFile sharing</description>
        <inlineHelpText>Data File</inlineHelpText>
        <label>DataFile</label>
        <referenceTo>DataFile__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <description>Calculates day of week based on date entry</description>
        <formula>IF(NOT( ISNULL( StartDateTime__c )) ,
IF(MOD(  DATEVALUE( StartDateTime__c )- DATE(0001,1,1) , 7) == 0 , &apos;Saturday&apos; , IF(MOD(DATEVALUE( StartDateTime__c )- DATE(0001,1,1) , 7) == 1 , &apos;Sunday&apos; ,
IF(MOD(DATEVALUE( StartDateTime__c )- DATE(0001,1,1) , 7) == 2 , &apos;Monday&apos; ,
IF(MOD(DATEVALUE( StartDateTime__c )- DATE(0001,1,1) , 7) == 3 , &apos;Tuesday&apos; ,
IF(MOD(DATEVALUE( StartDateTime__c )- DATE(0001,1,1) , 7) == 4 , &apos;Wednesday&apos; ,
IF(MOD(DATEVALUE( StartDateTime__c )- DATE(0001,1,1) , 7) == 5 , &apos;Thursday&apos; ,
IF(MOD(DATEVALUE( StartDateTime__c )- DATE(0001,1,1) , 7) == 6 , &apos;Friday&apos; , &apos;Date Error&apos;))))))),
IF(MOD(  Start_Date__c   - DATE(0001,1,1) , 7) == 0 , &apos;Saturday&apos; , IF(MOD(Start_Date__c  - DATE(0001,1,1) , 7) == 1 , &apos;Sunday&apos; ,
IF(MOD(Start_Date__c  - DATE(0001,1,1) , 7) == 2 , &apos;Monday&apos; ,
IF(MOD(Start_Date__c  - DATE(0001,1,1) , 7) == 3 , &apos;Tuesday&apos; ,
IF(MOD(Start_Date__c  - DATE(0001,1,1) , 7) == 4 , &apos;Wednesday&apos; ,
IF(MOD(Start_Date__c  - DATE(0001,1,1) , 7) == 5 , &apos;Thursday&apos; ,
IF(MOD(Start_Date__c  - DATE(0001,1,1) , 7) == 6 , &apos;Friday&apos; , &apos;Date Error&apos;))))))))</formula>
        <inlineHelpText>Calculated day of week based on date. Cannot edit</inlineHelpText>
        <label>DayOfWeek</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <description>End Date and Time for Schedule item. Combines date and time entered.</description>
        <inlineHelpText>End Date and Time for Schedule item. Combines end date and end time entered. Cannot edit field.</inlineHelpText>
        <label>EndDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>Ending date for schedule item</description>
        <inlineHelpText>Ending date for schedule item. Auto populated from Start Date. Cannot currently edit.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <description>Converts picklist value to number. Used for calculations.</description>
        <formula>CASE( End_Time__c ,
&quot;7:00:00&quot;,7,
&quot;7:15:00&quot;,7.25,
&quot;7:30:00&quot;,7.5,
&quot;7:45:00&quot;,7.75,
&quot;8:00:00&quot;,8,
&quot;8:15:00&quot;,8.25,
&quot;8:30:00&quot;,8.5,
&quot;8:45:00&quot;,8.75,
&quot;9:00:00&quot;,9,
&quot;9:15:00&quot;,9.25,
&quot;9:30:00&quot;,9.5,
&quot;9:45:00&quot;,9.75,
&quot;10:00:00&quot;,10,
&quot;10:15:00&quot;,10.25,
&quot;10:30:00&quot;,10.5,
&quot;10:45:00&quot;,10.75,
&quot;11:00:00&quot;,11,
&quot;11:15:00&quot;,11.25,
&quot;11:30:00&quot;,11.5,
&quot;11:45:00&quot;,11.75,
&quot;12:00:00&quot;,12,
&quot;12:15:00&quot;,12.25,
&quot;12:30:00&quot;,12.5,
&quot;12:45:00&quot;,12.75,
&quot;13:00:00&quot;,13,
&quot;13:15:00&quot;,13.25,
&quot;13:30:00&quot;,13.5,
&quot;13:45:00&quot;,13.75,
&quot;14:00:00&quot;,14,
&quot;14:15:00&quot;,14.25,
&quot;14:30:00&quot;,14.5,
&quot;14:45:00&quot;,14.75,
&quot;15:00:00&quot;,15,
&quot;15:15:00&quot;,15.25,
&quot;15:30:00&quot;,15.5,
&quot;15:45:00&quot;,15.75,
&quot;16:00:00&quot;,16,
&quot;16:15:00&quot;,16.25,
&quot;16:30:00&quot;,16.5,
&quot;16:45:00&quot;,16.75,
&quot;17:00:00&quot;,17,
&quot;17:15:00&quot;,17.25,
&quot;17:30:00&quot;,17.5,
&quot;17:45:00&quot;,17.75,
&quot;18:00:00&quot;,18,
&quot;18:15:00&quot;,18.25,
&quot;18:30:00&quot;,18.5,
&quot;18:45:00&quot;,18.75,
&quot;19:00:00&quot;,19,
&quot;19:15:00&quot;,19.25,
&quot;19:30:00&quot;,19.5,
&quot;19:45:00&quot;,19.75,
&quot;20:00:00&quot;,20,
&quot;20:15:00&quot;,20.25,
&quot;20:30:00&quot;,20.5,
&quot;20:45:00&quot;,20.75,
&quot;21:00:00&quot;,21,
&quot;21:15:00&quot;,21.25,
&quot;21:30:00&quot;,21.5,
&quot;21:45:00&quot;,21.75,
&quot;22:00:00&quot;,22,
&quot;22:15:00&quot;,22.25,
&quot;22:30:00&quot;,22.5,
&quot;22:45:00&quot;,22.75,
&quot;23:00:00&quot;,23,
&quot;23:15:00&quot;,23.25,
&quot;23:30:00&quot;,23.5,
&quot;23:45:00&quot;,23.75,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Ending time for schedule item</description>
        <inlineHelpText>End time for schedule. Can edit based on picklist values. Choose a value closest to ending time.</inlineHelpText>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00:00</fullName>
                </value>
                <value>
                    <fullName>8:15:00</fullName>
                </value>
                <value>
                    <fullName>8:30:00</fullName>
                </value>
                <value>
                    <fullName>8:45:00</fullName>
                </value>
                <value>
                    <fullName>9:00:00</fullName>
                </value>
                <value>
                    <fullName>9:15:00</fullName>
                </value>
                <value>
                    <fullName>9:30:00</fullName>
                </value>
                <value>
                    <fullName>9:45:00</fullName>
                </value>
                <value>
                    <fullName>10:00:00</fullName>
                </value>
                <value>
                    <fullName>10:15:00</fullName>
                </value>
                <value>
                    <fullName>10:30:00</fullName>
                </value>
                <value>
                    <fullName>10:45:00</fullName>
                </value>
                <value>
                    <fullName>11:00:00</fullName>
                </value>
                <value>
                    <fullName>11:15:00</fullName>
                </value>
                <value>
                    <fullName>11:30:00</fullName>
                </value>
                <value>
                    <fullName>11:45:00</fullName>
                </value>
                <value>
                    <fullName>12:00:00</fullName>
                </value>
                <value>
                    <fullName>12:15:00</fullName>
                </value>
                <value>
                    <fullName>12:30:00</fullName>
                </value>
                <value>
                    <fullName>12:45:00</fullName>
                </value>
                <value>
                    <fullName>13:00:00</fullName>
                </value>
                <value>
                    <fullName>13:15:00</fullName>
                </value>
                <value>
                    <fullName>13:30:00</fullName>
                </value>
                <value>
                    <fullName>13:45:00</fullName>
                </value>
                <value>
                    <fullName>14:00:00</fullName>
                </value>
                <value>
                    <fullName>14:15:00</fullName>
                </value>
                <value>
                    <fullName>14:30:00</fullName>
                </value>
                <value>
                    <fullName>14:45:00</fullName>
                </value>
                <value>
                    <fullName>15:00:00</fullName>
                </value>
                <value>
                    <fullName>15:15:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HitSettingType__c</fullName>
        <description>Used to eventually assign Hit Setting to schedule when needed</description>
        <label>HitSettingType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In_Person_Single_Staff</fullName>
                </value>
                <value>
                    <fullName>Member Mailing</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>PharmacyMailOrder</fullName>
                </value>
                <value>
                    <fullName>ApprovalNotification</fullName>
                </value>
                <value>
                    <fullName>HomeHealthChange</fullName>
                </value>
                <value>
                    <fullName>ProviderSelection</fullName>
                </value>
                <value>
                    <fullName>Disenrollment</fullName>
                </value>
                <value>
                    <fullName>TransportationNonEmergent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hit_Setting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Hit Setting</label>
        <referenceTo>Hit_Setting__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Provider (Contact). Populated with Trigger from Address Type entry.</description>
        <inlineHelpText>Provider associated with schedule item. Calculated based on Address Type. Cannot edit.</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Scheduling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Used for Salesforce to Salesforce sharing</description>
        <formula>/* Gets name of Record Type for Salesforce to Salesforce sharing */
RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record Type Name</inlineHelpText>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteDataFileId__c</fullName>
        <description>Remote DataFile Id</description>
        <inlineHelpText>Remote DataFile Id</inlineHelpText>
        <label>RemoteDataFileId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AccountId__c</fullName>
        <description>Remote AccountId for Salesforce to Salesforce</description>
        <inlineHelpText>Remote AccountId for Salesforce to Salesforce</inlineHelpText>
        <label>Remote AccountId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressType_Id__c</fullName>
        <description>Remote AddressType Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote AddressType Id</inlineHelpText>
        <label>Remote AddressType_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AuditSettingId__c</fullName>
        <description>Remote AuditSetting Id</description>
        <inlineHelpText>Remote AuditSetting Id</inlineHelpText>
        <label>Remote AuditSettingId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Contact_Id__c</fullName>
        <description>Remote Contact Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Contact Id</inlineHelpText>
        <label>Remote Contact_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Record_Type__c</fullName>
        <description>Value for Remote Record Type. Used for Salesforce to Salesforce</description>
        <inlineHelpText>Value for Remote Record Type</inlineHelpText>
        <label>Remote Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retroactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables creation of retroactive schedules for record keeping and reporting</description>
        <inlineHelpText>Retroactive schedule? Enables schedule dates and times in past</inlineHelpText>
        <label>Retroactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked complete when the job has been executed</description>
        <inlineHelpText>Marked complete when the job has been executed</inlineHelpText>
        <label>Schedule Job Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Job_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a scheduled job has been created for this record</inlineHelpText>
        <label>Schedule Job Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Job_ID__c</fullName>
        <label>Schedule Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Job_Name__c</fullName>
        <label>Schedule Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Content__c</fullName>
        <description>Social Media Content</description>
        <inlineHelpText>Social Media Content</inlineHelpText>
        <label>Social Media Content</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
                <value>
                    <fullName>ShareRecords</fullName>
                </value>
                <value>
                    <fullName>ReceiveRecords</fullName>
                </value>
                <value>
                    <fullName>FlowStatusSharePending</fullName>
                </value>
                <value>
                    <fullName>PNRCCheck</fullName>
                </value>
                <value>
                    <fullName>UpdateRelated</fullName>
                </value>
                <value>
                    <fullName>DeleteRecords</fullName>
                </value>
                <value>
                    <fullName>ScheduleRecords</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>Start Date and Time for Schedule item. Combines date and time entered.</description>
        <inlineHelpText>Start Date and Time for Schedule item. Combines start date and start time entered. Cannot edit field.</inlineHelpText>
        <label>StartDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Start date of schedule</description>
        <inlineHelpText>Start date of schedule item. Can edit if date needs to be changed.  Date must be today or in future, cannot change to a date in past.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <description>Converts picklist value to number. Used for calculations.</description>
        <formula>CASE( Start_Time__c ,
&quot;7:00:00&quot;,7,
&quot;7:15:00&quot;,7.25,
&quot;7:30:00&quot;,7.5,
&quot;7:45:00&quot;,7.75,
&quot;8:00:00&quot;,8,
&quot;8:15:00&quot;,8.25,
&quot;8:30:00&quot;,8.5,
&quot;8:45:00&quot;,8.75,
&quot;9:00:00&quot;,9,
&quot;9:15:00&quot;,9.25,
&quot;9:30:00&quot;,9.5,
&quot;9:45:00&quot;,9.75,
&quot;10:00:00&quot;,10,
&quot;10:15:00&quot;,10.25,
&quot;10:30:00&quot;,10.5,
&quot;10:45:00&quot;,10.75,
&quot;11:00:00&quot;,11,
&quot;11:15:00&quot;,11.25,
&quot;11:30:00&quot;,11.5,
&quot;11:45:00&quot;,11.75,
&quot;12:00:00&quot;,12,
&quot;12:15:00&quot;,12.25,
&quot;12:30:00&quot;,12.5,
&quot;12:45:00&quot;,12.75,
&quot;13:00:00&quot;,13,
&quot;13:15:00&quot;,13.25,
&quot;13:30:00&quot;,13.5,
&quot;13:45:00&quot;,13.75,
&quot;14:00:00&quot;,14,
&quot;14:15:00&quot;,14.25,
&quot;14:30:00&quot;,14.5,
&quot;14:45:00&quot;,14.75,
&quot;15:00:00&quot;,15,
&quot;15:15:00&quot;,15.25,
&quot;15:30:00&quot;,15.5,
&quot;15:45:00&quot;,15.75,
&quot;16:00:00&quot;,16,
&quot;16:15:00&quot;,16.25,
&quot;16:30:00&quot;,16.5,
&quot;16:45:00&quot;,16.75,
&quot;17:00:00&quot;,17,
&quot;17:15:00&quot;,17.25,
&quot;17:30:00&quot;,17.5,
&quot;17:45:00&quot;,17.75,
&quot;18:00:00&quot;,18,
&quot;18:15:00&quot;,18.25,
&quot;18:30:00&quot;,18.5,
&quot;18:45:00&quot;,18.75,
&quot;19:00:00&quot;,19,
&quot;19:15:00&quot;,19.25,
&quot;19:30:00&quot;,19.5,
&quot;19:45:00&quot;,19.75,
&quot;20:00:00&quot;,20,
&quot;20:15:00&quot;,20.25,
&quot;20:30:00&quot;,20.5,
&quot;20:45:00&quot;,20.75,
&quot;21:00:00&quot;,21,
&quot;21:15:00&quot;,21.25,
&quot;21:30:00&quot;,21.5,
&quot;21:45:00&quot;,21.75,
&quot;22:00:00&quot;,22,
&quot;22:15:00&quot;,22.25,
&quot;22:30:00&quot;,22.5,
&quot;22:45:00&quot;,22.75,
&quot;23:00:00&quot;,23,
&quot;23:15:00&quot;,23.25,
&quot;23:30:00&quot;,23.5,
&quot;23:45:00&quot;,23.75,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Start time for schedule</description>
        <inlineHelpText>Start time for schedule. Can edit based on picklist values. Choose a value closest to starting time.</inlineHelpText>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00:00</fullName>
                </value>
                <value>
                    <fullName>8:15:00</fullName>
                </value>
                <value>
                    <fullName>8:30:00</fullName>
                </value>
                <value>
                    <fullName>8:45:00</fullName>
                </value>
                <value>
                    <fullName>9:00:00</fullName>
                </value>
                <value>
                    <fullName>9:15:00</fullName>
                </value>
                <value>
                    <fullName>9:30:00</fullName>
                </value>
                <value>
                    <fullName>9:45:00</fullName>
                </value>
                <value>
                    <fullName>10:00:00</fullName>
                </value>
                <value>
                    <fullName>10:15:00</fullName>
                </value>
                <value>
                    <fullName>10:30:00</fullName>
                </value>
                <value>
                    <fullName>10:45:00</fullName>
                </value>
                <value>
                    <fullName>11:00:00</fullName>
                </value>
                <value>
                    <fullName>11:15:00</fullName>
                </value>
                <value>
                    <fullName>11:30:00</fullName>
                </value>
                <value>
                    <fullName>11:45:00</fullName>
                </value>
                <value>
                    <fullName>12:00:00</fullName>
                </value>
                <value>
                    <fullName>12:15:00</fullName>
                </value>
                <value>
                    <fullName>12:30:00</fullName>
                </value>
                <value>
                    <fullName>12:45:00</fullName>
                </value>
                <value>
                    <fullName>13:00:00</fullName>
                </value>
                <value>
                    <fullName>13:15:00</fullName>
                </value>
                <value>
                    <fullName>13:30:00</fullName>
                </value>
                <value>
                    <fullName>13:45:00</fullName>
                </value>
                <value>
                    <fullName>14:00:00</fullName>
                </value>
                <value>
                    <fullName>14:15:00</fullName>
                </value>
                <value>
                    <fullName>14:30:00</fullName>
                </value>
                <value>
                    <fullName>14:45:00</fullName>
                </value>
                <value>
                    <fullName>15:00:00</fullName>
                </value>
                <value>
                    <fullName>15:15:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>